@startuml

class User {
    id
    username
    password
    actif
    date_creation
}

class Candidat {
  id

}

class Agence {
  id

}

class Entreprise {
    id
}

class CV {
    id
    json
    pdf
    anonyme
    mobilite
}

class Selection {
    id
    date
}

class Offre {
    id
}




User <|-- Candidat
User <|-- Agence
User <|-- Entreprise
Candidat "1" ... "*" CV
Entreprise "*" ... "*" Offre
Selection .. CV
Selection .. Offre


@enduml